--- a/StarterSocialApp/Base.lproj/Main.storyboard
+++ b/StarterSocialApp/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11517.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,11 +18,104 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a5P-gd-R8D">
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopes-logo" translatesAutoresizingMaskIntoConstraints="NO" id="nST-kc-XtL"/>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="nST-kc-XtL" firstAttribute="centerY" secondItem="a5P-gd-R8D" secondAttribute="centerY" id="DZX-uz-thb"/>
+                                    <constraint firstAttribute="height" constant="160" id="VkN-Tj-hNO"/>
+                                    <constraint firstItem="nST-kc-XtL" firstAttribute="centerX" secondItem="a5P-gd-R8D" secondAttribute="centerX" id="xRB-Ge-Wwr"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FQR-GC-UoK">
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you havent't signed in before, an account will be automatically created for you" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nnG-xX-v68">
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.21688031771560232" green="0.59962192429605532" blue="0.61374303864948643" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="nnG-xX-v68" firstAttribute="top" secondItem="FQR-GC-UoK" secondAttribute="top" constant="8" id="5iv-LT-3QO"/>
+                                    <constraint firstAttribute="bottom" secondItem="nnG-xX-v68" secondAttribute="bottom" constant="8" id="tHk-gn-W2b"/>
+                                    <constraint firstItem="nnG-xX-v68" firstAttribute="leading" secondItem="FQR-GC-UoK" secondAttribute="leading" constant="8" id="u8B-f9-a9d"/>
+                                    <constraint firstAttribute="trailing" secondItem="nnG-xX-v68" secondAttribute="trailing" constant="8" id="uDx-pV-RF5"/>
+                                    <constraint firstAttribute="height" constant="75" id="ygo-FW-i4P"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sign in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Wl-9o-EJu">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="K9V-nN-WGw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ju6-Zw-faf">
+                                <color key="backgroundColor" red="0.2317950427532196" green="0.34907326102256775" blue="0.59601563215255737" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="196" id="DIj-dy-Ccr"/>
+                                    <constraint firstAttribute="height" constant="175" id="MII-JF-cnq"/>
+                                </constraints>
+                                <state key="normal" image="f"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="gyY-74-E8M">
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ame-KL-aet">
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3U6-eP-em7">
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ms1-JT-ss9">
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bef-oM-fxx">
+                                                <color key="backgroundColor" red="0.8666666666666667" green="0.17254901960784313" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                                <state key="normal" title="Sign In">
+                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.87" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Ju6-Zw-faf" firstAttribute="top" secondItem="2Wl-9o-EJu" secondAttribute="bottom" constant="20" id="5yA-pJ-7e7"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="FQR-GC-UoK" secondAttribute="bottom" id="9Y0-QC-5il"/>
+                            <constraint firstAttribute="trailing" secondItem="FQR-GC-UoK" secondAttribute="trailing" constant="-2" id="Bch-63-v8L"/>
+                            <constraint firstItem="2Wl-9o-EJu" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="CM9-Rt-3mM"/>
+                            <constraint firstItem="2Wl-9o-EJu" firstAttribute="top" secondItem="a5P-gd-R8D" secondAttribute="bottom" constant="8" id="XE8-uC-HEJ"/>
+                            <constraint firstItem="2Wl-9o-EJu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="YS7-54-4LZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gyY-74-E8M" secondAttribute="trailing" constant="39" id="aYy-rq-Ria"/>
+                            <constraint firstItem="Ju6-Zw-faf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bJd-KV-ssU"/>
+                            <constraint firstItem="a5P-gd-R8D" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="fIP-RB-4Ou"/>
+                            <constraint firstItem="gyY-74-E8M" firstAttribute="top" secondItem="Ju6-Zw-faf" secondAttribute="bottom" constant="20" id="gGH-YP-Lym"/>
+                            <constraint firstAttribute="trailing" secondItem="a5P-gd-R8D" secondAttribute="trailing" id="jYQ-uz-qVI"/>
+                            <constraint firstItem="FQR-GC-UoK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="jpT-9Q-tjH"/>
+                            <constraint firstItem="gyY-74-E8M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-9" id="oUK-D1-Hbi"/>
+                            <constraint firstItem="gyY-74-E8M" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="21" id="qPC-mX-WYb"/>
+                            <constraint firstItem="a5P-gd-R8D" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ze2-YC-NS3"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.0809595202399"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="devslopes-logo" width="150" height="94"/>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
